Fix Event List Alignment on Volunteer Dashboard

--- a/src/pages/dashboard/volunteerDashboard.css
+++ b/src/pages/dashboard/volunteerDashboard.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 90%;
+    margin: 30px auto;
 }
 
 .volunteer-dashboard-page-container .titled-card-container {
-    width: 90%;
+    width: 100%;
 }
 
 .volunteer-dashboard-page-container .my-stats-section {
@@ -26,15 +28,11 @@
     margin-right: 0;
     bottom: 0;
     right: 0;
-
     background: transparent;
     border-radius: 20px;
     border: 0.5px solid var(--text-color-dark);
-
     color: var(--text-color-dark);
-
     cursor: pointer;
-
     width: 170px;
 }
 
@@ -59,18 +57,10 @@
 
 .events-section {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
-    width: 90%;
-    height: 100%;
-}
-
-.events-section .event-lists {
-    display: flex;
-    justify-content: space-between;
-    justify-items: center;
     width: 100%;
-    height: 99%;
+    height: 100%;
 }
 
 .events-section .events-container {
@@ -80,13 +70,12 @@
 
 .dashboard-event-legend {
     align-self: flex-start;
-    margin-left: 5%;
+    margin-left: 0.5em;
+    margin-top: 1em;
 }
 
 .volunteer-dashboard-page-container .availability-section {
-  width: 90%;
-  margin-left: 5%;
-  margin-right: 5%;
+  width: 100%;
   margin-bottom: 25px;
 }
 
@@ -110,7 +99,6 @@
 
     .volunteer-dashboard-page-container .my-stats-section h1 {
         text-align: center;
-
         margin: 0;
         margin-bottom: 20px;
         padding: 0;
@@ -121,7 +109,7 @@
     }
 
     .volunteer-dashboard-page-container .event-list-component {
-        width: 100%;
+        width: 48%;
         height: 100%;
         margin-bottom: 30px;
     }
@@ -131,6 +119,10 @@
         right: 0;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .dashboard-event-legend{
+        margin-top: 0em;
     }
 }
 
@@ -159,7 +151,7 @@
         margin-bottom: 30px;
     }
 
-    .events-section .event-lists {
+    .events-section {
         flex-direction: column;
         align-items: center;
     }
@@ -175,6 +167,7 @@
     .dashboard-event-legend{
         align-self: center;
         margin-left: 0;
+        margin-top: 0em;
     }
     .dashboard-event-legend .legend-key-section {
         justify-content: space-between;
